@@ -1,5 +1,7 @@
 2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-util.el (gnus-recursive-directory-files): New function.
+
 	* mm-archive.el (mm-archive-list-files): Inline text and image parts.
 	(mm-archive-decoders): Add tgz support.
 
